--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <p id="subtitle">É todo pro</p>
     <p id="description">
       O iPhone  13 pro é uma enorme evolução. Ele traz uma rapidez absurda a tudo
-      o que você faz e vem com novos recursos espetaculare para fotos e videos.
+      o que você faz e vem com novos recursos espetaculares para fotos e videos.
       Tudo em dois tamanhos
     </p>
     <p id="price">A partir de R$ 9.499</p>
@@ -76,27 +76,33 @@
     <div id="img-picker">
       <ul>
         <li id="green">
-          <span class="color selected"></span>
+          <span class="color"></span>
           <span class="description">Verde-alpino</span>
         </li>
-  
+
         <li id="silver">
           <span class="color"></span>
           <span class="description">Prateado</span>
         </li>
+
         <li id="golden">
           <span class="color"></span>
           <span class="description">Dourado</span>
         </li>
+
         <li id="grafite">
           <span class="color"></span>
           <span class="description">Grafite</span>
         </li>
+
         <li id="blue">
           <span class="color"></span>
           <span class="description">Azul-Sierra</span>
         </li>
+
       </ul>
+    </div>    
+
     </div>
   </main>
 </body>
